--- a/applications/hdstools/sun245.tex
+++ b/applications/hdstools/sun245.tex
@@ -1,552 +1,37 @@
-\documentclass[twoside,11pt]{article}
+\documentclass[twoside,11pt,nolof]{starlink}
 
 % ? Specify used packages
-% \usepackage{graphicx}        %  Use this one for final production.
-% \usepackage[draft]{graphicx} %  Use this one for drafting.
 % ? End of specify used packages
 
-\pagestyle{myheadings}
+
 
 % -----------------------------------------------------------------------------
 % ? Document identification
 % Fixed part
-\newcommand{\stardoccategory}  {Starlink User Note}
-\newcommand{\stardocinitials}  {SUN}
-\newcommand{\stardocsource}    {sun\stardocnumber}
-\newcommand{\stardoccopyright}
+\stardoccategory    {Starlink User Note}
+\stardocinitials    {SUN}
+\stardocsource      {sun\stardocnumber}
+\stardoccopyright
 {Copyright \copyright\ 2000 Council for the Central Laboratory of the Research Councils}
 
 % Variable part - replace [xxx] as appropriate.
-\newcommand{\stardocnumber}    {245.0}
-\newcommand{\stardocauthors}   {A. J. Chipperfield}
-\newcommand{\stardocdate}      {21 Jan 2002}
-\newcommand{\stardoctitle}     {HDSTOOLS\\Tools To Display and Edit HDS Objects}
-\newcommand{\stardocversion}   {Version 1.0}
-\newcommand{\stardocmanual}    {User's manual}
-\newcommand{\stardocabstract}  {The HDSTOOLS package contains a number of tools
+\stardocnumber      {245.0}
+\stardocauthors     {A. J. Chipperfield}
+\stardocdate        {21 Jan 2002}
+\stardoctitle       {HDSTOOLS\\Tools To Display and Edit HDS Objects}
+\stardocversion     {Version 1.0}
+\stardocmanual      {User's manual}
+\stardocabstract  {The HDSTOOLS package contains a number of tools
 to edit and display HDS objects. The tools originated in the ASTERIX package
 but have now been modified to run as normal Starlink tasks.}
 % ? End of document identification
 % -----------------------------------------------------------------------------
 
-% +
-%  Name:
-%     sun.tex
-%
-%  Purpose:
-%     Template for Starlink User Note (SUN) documents.
-%     Refer to SUN/199
-%
-%  Authors:
-%     AJC: A.J.Chipperfield (Starlink, RAL)
-%     BLY: M.J.Bly (Starlink, RAL)
-%     PWD: Peter W. Draper (Starlink, Durham University)
-%
-%  History:
-%     17-JAN-1996 (AJC):
-%        Original with hypertext macros, based on MDL plain originals.
-%     16-JUN-1997 (BLY):
-%        Adapted for LaTeX2e.
-%        Added picture commands.
-%     13-AUG-1998 (PWD):
-%        Converted for use with LaTeX2HTML version 98.2 and
-%        Star2HTML version 1.3.
-%      1-FEB-2000 (AJC):
-%        Add Copyright statement in LaTeX
-%     {Add further history here}
-%
-% -
-
-\newcommand{\stardocname}{\stardocinitials /\stardocnumber}
-\markboth{\stardocname}{\stardocname}
-\setlength{\textwidth}{160mm}
-\setlength{\textheight}{230mm}
-\setlength{\topmargin}{-2mm}
-\setlength{\oddsidemargin}{0mm}
-\setlength{\evensidemargin}{0mm}
-\setlength{\parindent}{0mm}
-\setlength{\parskip}{\medskipamount}
-\setlength{\unitlength}{1mm}
-
-% -----------------------------------------------------------------------------
-%  Hypertext definitions.
-%  ======================
-%  These are used by the LaTeX2HTML translator in conjunction with star2html.
-
-%  Comment.sty: version 2.0, 19 June 1992
-%  Selectively in/exclude pieces of text.
-%
-%  Author
-%    Victor Eijkhout                                      <eijkhout@cs.utk.edu>
-%    Department of Computer Science
-%    University Tennessee at Knoxville
-%    104 Ayres Hall
-%    Knoxville, TN 37996
-%    USA
-
-%  Do not remove the %begin{latexonly} and %end{latexonly} lines (used by
-%  LaTeX2HTML to signify text it shouldn't process).
-%begin{latexonly}
-\makeatletter
-\def\makeinnocent#1{\catcode`#1=12 }
-\def\csarg#1#2{\expandafter#1\csname#2\endcsname}
-
-\def\ThrowAwayComment#1{\begingroup
-    \def\CurrentComment{#1}%
-    \let\do\makeinnocent \dospecials
-    \makeinnocent\^^L% and whatever other special cases
-    \endlinechar`\^^M \catcode`\^^M=12 \xComment}
-{\catcode`\^^M=12 \endlinechar=-1 %
- \gdef\xComment#1^^M{\def\test{#1}
-      \csarg\ifx{PlainEnd\CurrentComment Test}\test
-          \let\html@next\endgroup
-      \else \csarg\ifx{LaLaEnd\CurrentComment Test}\test
-            \edef\html@next{\endgroup\noexpand\end{\CurrentComment}}
-      \else \let\html@next\xComment
-      \fi \fi \html@next}
-}
-\makeatother
-
-\def\includecomment
- #1{\expandafter\def\csname#1\endcsname{}%
-    \expandafter\def\csname end#1\endcsname{}}
-\def\excludecomment
- #1{\expandafter\def\csname#1\endcsname{\ThrowAwayComment{#1}}%
-    {\escapechar=-1\relax
-     \csarg\xdef{PlainEnd#1Test}{\string\\end#1}%
-     \csarg\xdef{LaLaEnd#1Test}{\string\\end\string\{#1\string\}}%
-    }}
-
-%  Define environments that ignore their contents.
-\excludecomment{comment}
-\excludecomment{rawhtml}
-\excludecomment{htmlonly}
-
-%  Hypertext commands etc. This is a condensed version of the html.sty
-%  file supplied with LaTeX2HTML by: Nikos Drakos <nikos@cbl.leeds.ac.uk> &
-%  Jelle van Zeijl <jvzeijl@isou17.estec.esa.nl>. The LaTeX2HTML documentation
-%  should be consulted about all commands (and the environments defined above)
-%  except \xref and \xlabel which are Starlink specific.
-
-\newcommand{\htmladdnormallinkfoot}[2]{#1\footnote{#2}}
-\newcommand{\htmladdnormallink}[2]{#1}
-\newcommand{\htmladdimg}[1]{}
-\newcommand{\hyperref}[4]{#2\ref{#4}#3}
-\newcommand{\htmlref}[2]{#1}
-\newcommand{\htmlimage}[1]{}
-\newcommand{\htmladdtonavigation}[1]{}
-
-\newenvironment{latexonly}{}{}
-\newcommand{\latex}[1]{#1}
-\newcommand{\html}[1]{}
-\newcommand{\latexhtml}[2]{#1}
-\newcommand{\HTMLcode}[2][]{}
-
-%  Starlink cross-references and labels.
-\newcommand{\xref}[3]{#1}
-\newcommand{\xlabel}[1]{}
-
-%  LaTeX2HTML symbol.
-\newcommand{\latextohtml}{\LaTeX2\texttt{HTML}}
-
-%  Define command to re-centre underscore for Latex and leave as normal
-%  for HTML (severe problems with \_ in tabbing environments and \_\_
-%  generally otherwise).
-\renewcommand{\_}{\texttt{\symbol{95}}}
-
-% -----------------------------------------------------------------------------
-%  Debugging.
-%  =========
-%  Remove % on the following to debug links in the HTML version using Latex.
-
-% \newcommand{\hotlink}[2]{\fbox{\begin{tabular}[t]{@{}c@{}}#1\\\hline{\footnotesize #2}\end{tabular}}}
-% \renewcommand{\htmladdnormallinkfoot}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\htmladdnormallink}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\hyperref}[4]{\hotlink{#1}{\S\ref{#4}}}
-% \renewcommand{\htmlref}[2]{\hotlink{#1}{\S\ref{#2}}}
-% \renewcommand{\xref}[3]{\hotlink{#1}{#2 -- #3}}
-%end{latexonly}
-% -----------------------------------------------------------------------------
-% ? Document specific \newcommand or \newenvironment commands.
-% ? End of document specific commands
-% -----------------------------------------------------------------------------
-%+
-%  Name:
-%     SST.TEX
-
-%  Purpose:
-%     Define LaTeX commands for laying out Starlink routine descriptions.
-
-%  Language:
-%     LaTeX
-
-%  Type of Module:
-%     LaTeX data file.
-
-%  Description:
-%     This file defines LaTeX commands which allow routine documentation
-%     produced by the SST application PROLAT to be processed by LaTeX and
-%     by LaTeX2html. The contents of this file should be included in the
-%     source prior to any statements that make of the sst commnds.
-
-%  Notes:
-%     The style file html.sty provided with LaTeX2html needs to be used.
-%     This must be before this file.
-
-%  Authors:
-%     RFWS: R.F. Warren-Smith (STARLINK)
-%     PDRAPER: P.W. Draper (Starlink - Durham University)
-
-%  History:
-%     10-SEP-1990 (RFWS):
-%        Original version.
-%     10-SEP-1990 (RFWS):
-%        Added the implementation status section.
-%     12-SEP-1990 (RFWS):
-%        Added support for the usage section and adjusted various spacings.
-%     8-DEC-1994 (PDRAPER):
-%        Added support for simplified formatting using LaTeX2html.
-%     {enter_further_changes_here}
-
-%  Bugs:
-%     {note_any_bugs_here}
-
-%-
-
-%  Define length variables.
-\newlength{\sstbannerlength}
-\newlength{\sstcaptionlength}
-\newlength{\sstexampleslength}
-\newlength{\sstexampleswidth}
-
-%  Define a \tt font of the required size.
-\latex{\newfont{\ssttt}{cmtt10 scaled 1095}}
-\html{\newcommand{\ssttt}{\tt}}
-
-%  Define a command to produce a routine header, including its name,
-%  a purpose description and the rest of the routine's documentation.
-\newcommand{\sstroutine}[3]{
-   \goodbreak
-   \rule{\textwidth}{0.5mm}
-   \vspace{-7ex}
-   \newline
-   \settowidth{\sstbannerlength}{{\Large {\bf #1}}}
-   \setlength{\sstcaptionlength}{\textwidth}
-   \setlength{\sstexampleslength}{\textwidth}
-   \addtolength{\sstbannerlength}{0.5em}
-   \addtolength{\sstcaptionlength}{-2.0\sstbannerlength}
-   \addtolength{\sstcaptionlength}{-5.0pt}
-   \settowidth{\sstexampleswidth}{{\bf Examples:}}
-   \addtolength{\sstexampleslength}{-\sstexampleswidth}
-   \parbox[t]{\sstbannerlength}{\flushleft{\Large {\bf #1}}}
-   \parbox[t]{\sstcaptionlength}{\center{\Large #2}}
-   \parbox[t]{\sstbannerlength}{\flushright{\Large {\bf #1}}}
-   \begin{description}
-      #3
-   \end{description}
-}
-
-%  Format the description section.
-\newcommand{\sstdescription}[1]{\item[Description:] #1}
-
-%  Format the usage section.
-\newcommand{\sstusage}[1]{\item[Usage:] \mbox{}
-\\[1.3ex]{\raggedright \ssttt #1}}
-
-%  Format the invocation section.
-\newcommand{\sstinvocation}[1]{\item[Invocation:]\hspace{0.4em}{\tt #1}}
-
-%  Format the arguments section.
-\newcommand{\sstarguments}[1]{
-   \item[Arguments:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #1
-   \end{description}
-}
-
-%  Format the returned value section (for a function).
-\newcommand{\sstreturnedvalue}[1]{
-   \item[Returned Value:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #1
-   \end{description}
-}
-
-%  Format the parameters section (for an application).
-\newcommand{\sstparameters}[1]{
-   \item[Parameters:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #1
-   \end{description}
-}
-
-%  Format the examples section.
-\newcommand{\sstexamples}[1]{
-   \item[Examples:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #1
-   \end{description}
-}
-
-%  Define the format of a subsection in a normal section.
-\newcommand{\sstsubsection}[1]{ \item[{#1}] \mbox{} \\}
-
-%  Define the format of a subsection in the examples section.
-\newcommand{\sstexamplesubsection}[2]{\sloppy
-\item[\parbox{\sstexampleslength}{\ssttt #1}] \mbox{} \vspace{1.0ex}
-\\ #2 }
-
-%  Format the notes section.
-\newcommand{\sstnotes}[1]{\item[Notes:] \mbox{} \\[1.3ex] #1}
-
-%  Provide a general-purpose format for additional (DIY) sections.
-\newcommand{\sstdiytopic}[2]{\item[{\hspace{-0.35em}#1\hspace{-0.35em}:}]
-\mbox{} \\[1.3ex] #2}
-
-%  Format the implementation status section.
-\newcommand{\sstimplementationstatus}[1]{
-   \item[{Implementation Status:}] \mbox{} \\[1.3ex] #1}
-
-%  Format the bugs section.
-\newcommand{\sstbugs}[1]{\item[Bugs:] #1}
-
-%  Format a list of items while in paragraph mode.
-\newcommand{\sstitemlist}[1]{
-  \mbox{} \\
-  \vspace{-3.5ex}
-  \begin{itemize}
-     #1
-  \end{itemize}
-}
-
-%  Define the format of an item.
-\newcommand{\sstitem}{\item}
-
-%% Now define html equivalents of those already set. These are used by
-%  latex2html and are defined in the html.sty files.
-\begin{htmlonly}
-
-%  sstroutine.
-   \newcommand{\sstroutine}[3]{
-      \subsection{#1\xlabel{#1}-\label{#1}#2}
-      \begin{description}
-         #3
-      \end{description}
-   }
-
-%  sstdescription
-   \newcommand{\sstdescription}[1]{\item[Description:]
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstusage
-   \newcommand{\sstusage}[1]{\item[Usage:]
-      \begin{description}
-         {\ssttt #1}
-      \end{description}
-      \\
-   }
-
-%  sstinvocation
-   \newcommand{\sstinvocation}[1]{\item[Invocation:]
-      \begin{description}
-         {\ssttt #1}
-      \end{description}
-      \\
-   }
-
-%  sstarguments
-   \newcommand{\sstarguments}[1]{
-      \item[Arguments:] \\
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstreturnedvalue
-   \newcommand{\sstreturnedvalue}[1]{
-      \item[Returned Value:] \\
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstparameters
-   \newcommand{\sstparameters}[1]{
-      \item[Parameters:] \\
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstexamples
-   \newcommand{\sstexamples}[1]{
-      \item[Examples:] \\
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstsubsection
-   \newcommand{\sstsubsection}[1]{\item[{#1}]}
-
-%  sstexamplesubsection
-   \newcommand{\sstexamplesubsection}[2]{\item[{\ssttt #1}] #2}
-
-%  sstnotes
-   \newcommand{\sstnotes}[1]{\item[Notes:] #1 }
-
-%  sstdiytopic
-   \newcommand{\sstdiytopic}[2]{\item[{#1}] #2 }
-
-%  sstimplementationstatus
-   \newcommand{\sstimplementationstatus}[1]{
-      \item[Implementation Status:] #1
-   }
-
-%  sstitemlist
-   \newcommand{\sstitemlist}[1]{
-      \begin{itemize}
-         #1
-      \end{itemize}
-      \\
-   }
-%  sstitem
-   \newcommand{\sstitem}{\item}
-
-\end{htmlonly}
-
-%  End of "sst.tex" layout definitions.
-%.
 
 %  Title Page.
 %  ===========
-\renewcommand{\thepage}{\roman{page}}
 \begin{document}
-\thispagestyle{empty}
-
-%  Latex document header.
-%  ======================
-\begin{latexonly}
-   CCLRC / \textsc{Rutherford Appleton Laboratory} \hfill \textbf{\stardocname}\\
-   {\large Particle Physics \& Astronomy Research Council}\\
-   {\large Starlink Project\\}
-   {\large \stardoccategory\ \stardocnumber}
-   \begin{flushright}
-   \stardocauthors\\
-   \stardocdate
-   \end{flushright}
-   \vspace{-4mm}
-   \rule{\textwidth}{0.5mm}
-   \vspace{5mm}
-   \begin{center}
-   {\Huge\textbf{\stardoctitle \\ [2.5ex]}}
-   {\LARGE\textbf{\stardocversion \\ [4ex]}}
-   {\Huge\textbf{\stardocmanual}}
-   \end{center}
-   \vspace{5mm}
-
-% ? Add picture here if required for the LaTeX version.
-%   e.g. \includegraphics[scale=0.3]{filename.ps}
-% ? End of picture
-
-% ? Heading for abstract if used.
-   \vspace{10mm}
-   \begin{center}
-      {\Large\textbf{Abstract}}
-   \end{center}
-% ? End of heading for abstract.
-\end{latexonly}
-
-%  HTML documentation header.
-%  ==========================
-\begin{htmlonly}
-   \xlabel{}
-   \begin{rawhtml} <H1> \end{rawhtml}
-      \stardoctitle\\
-      \stardocversion\\
-      \stardocmanual
-   \begin{rawhtml} </H1> <HR> \end{rawhtml}
-
-% ? Add picture here if required for the hypertext version.
-%   e.g. \includegraphics[scale=0.7]{filename.ps}
-% ? End of picture
-
-   \begin{rawhtml} <P> <I> \end{rawhtml}
-   \stardoccategory\ \stardocnumber \\
-   \stardocauthors \\
-   \stardocdate
-   \begin{rawhtml} </I> </P> <H3> \end{rawhtml}
-      \htmladdnormallink{CCLRC / Rutherford Appleton Laboratory}
-                        {http://www.cclrc.ac.uk} \\
-      \htmladdnormallink{Particle Physics \& Astronomy Research Council}
-                        {http://www.pparc.ac.uk} \\
-   \begin{rawhtml} </H3> <H2> \end{rawhtml}
-      \htmladdnormallink{Starlink Project}{http://www.starlink.ac.uk/}
-   \begin{rawhtml} </H2> \end{rawhtml}
-   \htmladdnormallink{\htmladdimg{source.gif} Retrieve hardcopy}
-      {http://www.starlink.ac.uk/cgi-bin/hcserver?\stardocsource}\\
-
-%  HTML document table of contents.
-%  ================================
-%  Add table of contents header and a navigation button to return to this
-%  point in the document (this should always go before the abstract \section).
-  \label{stardoccontents}
-  \begin{rawhtml}
-    <HR>
-    <H2>Contents</H2>
-  \end{rawhtml}
-  \htmladdtonavigation{\htmlref{\htmladdimg{contents_motif.gif}}
-        {stardoccontents}}
-
-% ? New section for abstract if used.
-  \section{\xlabel{abstract}Abstract}
-% ? End of new section for abstract
-\end{htmlonly}
-
-% -----------------------------------------------------------------------------
-% ? Document Abstract. (if used)
-%  ==================
-\stardocabstract
-% ? End of document abstract
-
-% -----------------------------------------------------------------------------
-% ? Latex Copyright Statement
-%  =========================
-\begin{latexonly}
-\newpage
-\vspace*{\fill}
-\stardoccopyright
-\end{latexonly}
-% ? End of Latex copyright statement
-
-% -----------------------------------------------------------------------------
-% ? Latex document Table of Contents (if used).
-%  ===========================================
-  \newpage
-  \begin{latexonly}
-    \setlength{\parskip}{0mm}
-    \tableofcontents
-    \setlength{\parskip}{\medskipamount}
-    \markboth{\stardocname}{\stardocname}
-  \end{latexonly}
-% ? End of Latex document table of contents
-% -----------------------------------------------------------------------------
-
-\cleardoublepage
-\renewcommand{\thepage}{\arabic{page}}
-\setcounter{page}{1}
+\scfrontmatter
 
 % ? Main text
 \section{Introduction}
@@ -577,16 +62,16 @@ The following instructions assume your site has been set up in the standard
 Starlink way.
 
 To initialise the HDSTOOLS package for running from the Unix shell, type:
-\begin{quote}
-\texttt{\% hdstools}
-\end{quote}
+\begin{terminalv}
+% hdstools
+\end{terminalv}
 This will \texttt{source} the file \texttt{/star/bin/hdstools/hdstools.csh}
 to set up aliases for the tools.
 
 Similarly, to run from ICL, type:
-\begin{quote}
-\texttt{ICL> hdstools}
-\end{quote}
+\begin{terminalv}
+ICL> hdstools
+\end{terminalv}
 This will `load' the ICL script \texttt{/star/bin/hdstools/hdstools.icl}
 to `define' the required commands.
 
@@ -616,9 +101,9 @@ Parameter specifiers which are not keyword specifiers are positional -- the
 first of them applies to the parameter whose position is defined as 1,
 the second to the parameter whose position is defined as 2 \textit{etc.}
 For example:
-\begin{quote}
-\texttt{\% hcreate file dims=10 \_REAL}
-\end{quote}
+\begin{terminalv}
+% hcreate file dims=10 _REAL
+\end{terminalv}
 The parameter whose position is 1 takes the value \texttt{file}, the parameter
 whose keyword is DIMS takes the value \texttt{10} and the parameter whose
 position is 2 takes the value \texttt{\_REAL}. Precisely how the values are
@@ -673,9 +158,9 @@ the user will be re-prompted.
 An HDS object is specified as a pathname comprising a 'container file'
 optionally followed by a number of component names separated by `.' -- all but
 the last component must be structures. For example:
-\begin{quote}
-image.data\_array.data
-\end{quote}
+\begin{terminalv}
+image.data_array.data
+\end{terminalv}
 specifies component DATA of a structured component DATA\_ARRAY of the
 container file \texttt{image.sdf}. Note that the file extension (\texttt{.sdf}
 is not given and the case of component names is not significant.
@@ -689,9 +174,9 @@ end. If the `:' is also omitted the upper and lower limits will be the same
 \textit{i.e.} the one number given.
 
 For example:
-\begin{quote}
-\texttt{container(2).data\_array.data(:50,100:150)}
-\end{quote}
+\begin{terminalv}
+container(2).data_array.data(:50,100:150)
+\end{terminalv}
 specifies elements 1 to 50 in the first dimension and 100 to 150 in the second
 the DATA component of the DATA\_ARRAY structure of the second structure in the
 top-level structure array in container file \texttt{container.sdf}.
@@ -711,9 +196,9 @@ otherwise occur.
 \end{tabular}
 
 For example:
-\begin{quote}
-\texttt{\% hcreate prompt}
-\end{quote}
+\begin{terminalv}
+% hcreate prompt
+\end{terminalv}
 will cause a prompt for all the parameters of \texttt{hcreate}, including
 the dimensions which would otherwise be defaulted to produce a scalar.
 
@@ -778,9 +263,9 @@ library and interrogate the environment variables to determine any
 \xref{MSG tuning parameters}{sun104}{MSG_TUNE}\latex{ (see SUN/104)}.
 
 For example, on Unix,
-\begin{quote}
-\% setenv MSG\_FILTER 1
-\end{quote}
+\begin{terminalv}
+% setenv MSG_FILTER 1
+\end{terminalv}
 will cause the application to run in `QUIET' mode and output of the application
 version number and other purely informational messages will be prevented.
 
@@ -903,17 +388,17 @@ Running from ICL will be similar but quotes, parentheses and square brackets
          will be created, but file2 must already exist.
       }
       \sstexamplesubsection{
-         \% hcopy {\tt '}[1 2 3 4 5]{\tt '} file.array
+         \% hcopy \texttt{'}[1 2 3 4 5]\texttt{'} file.array
       }{
          Copy the explicit values given into a component ARRAY within file.
       }
       \sstexamplesubsection{
-         \% hcopy {\tt '}{\tt "}Counts/sec{\tt "}{\tt '} {\tt '}file.axis(2).units{\tt '}
+         \% hcopy \texttt{'}\texttt{"}Counts/sec\texttt{"}\texttt{'} \texttt{'}file.axis(2).units\texttt{'}
       }{
          A more practical example of the above.
       }
       \sstexamplesubsection{
-         \% hcopy {\tt '}file.axis(1){\tt '} {\tt '}file.axis(2){\tt '}
+         \% hcopy \texttt{'}file.axis(1)\texttt{'} \texttt{'}file.axis(2)\texttt{'}
       }{
          Copy the first element of the AXIS array to the second - works for
          structure or primitive arrays.
@@ -968,7 +453,7 @@ Running from ICL will be similar but quotes, parentheses and square brackets
    }
    \sstexamples{
       \sstexamplesubsection{
-         \% hcreate file1 \_integer {\tt '}[10,25]{\tt '}
+         \% hcreate file1 \_integer \texttt{'}[10,25]\texttt{'}
       }{
          Creates an HDS container file, file1, containing a 10x25 \_INTEGER
          array. (Note that the square brackets have to be protected from the
@@ -981,7 +466,7 @@ Running from ICL will be similar but quotes, parentheses and square brackets
          type STRUC.
       }
       \sstexamplesubsection{
-         \% hcreate file1.array \_real {\tt '}[10,25]{\tt '}
+         \% hcreate file1.array \_real \texttt{'}[10,25]\texttt{'}
       }{
          Creates a 10x25 array named ARRAY of type \_REAL in the HDS
          structure created in the previous example
@@ -1038,7 +523,7 @@ Running from ICL will be similar but quotes, parentheses and square brackets
       \sstexamplesubsection{
          \% hdelete file1.data
       }{
-         Deletes component {\tt '}data{\tt '} from the container file{\tt '}s top-level
+         Deletes component \texttt{'}data\texttt{'} from the container file\texttt{'}s top-level
          structure.
       }
       \sstexamplesubsection{
@@ -1088,7 +573,7 @@ Running from ICL will be similar but quotes, parentheses and square brackets
          Produces a summary of file1.sdf in text file summary.lis.
       }
       \sstexamplesubsection{
-         \% hdir file2 {\tt '}{\tt "}O=summary.lis{\tt "}{\tt '}
+         \% hdir file2 \texttt{'}\texttt{"}O=summary.lis\texttt{"}\texttt{'}
       }{
          Appends a summary of file2.sdf to text file summary.lis.
       }
@@ -1134,7 +619,7 @@ Running from ICL will be similar but quotes, parentheses and square brackets
          Description of data subset (range in 1st dimension \{,range in 2nd
          dimension\},\{...\}) eg. 5:10,1:5 for 2-D, 10:20 for 1-D. The range
          specifier for each dimension follows the same convention as the
-         FORTRAN substring specifier so {\tt "}:50{\tt "} {\tt "}20:{\tt "} {\tt "}5:10,:{\tt "} are all valid.
+         FORTRAN substring specifier so \texttt{"}:50\texttt{"} \texttt{"}20:\texttt{"} \texttt{"}5:10,:\texttt{"} are all valid.
          [$*$ (whole object)]
       }
       \sstsubsection{
@@ -1157,7 +642,7 @@ Running from ICL will be similar but quotes, parentheses and square brackets
          Display whole of specified array on terminal with default format.
       }
       \sstexamplesubsection{
-         \% hdisplay img.quality dev=p slice=`{\tt "}100:120,250:300{\tt "}{\tt '} fmt=z1
+         \% hdisplay img.quality dev=p slice=`\texttt{"}100:120,250:300\texttt{"}\texttt{'} fmt=z1
       }{
          Outputs the specified slice of a quality array in hex format to the
          printer.
@@ -1209,18 +694,18 @@ Running from ICL will be similar but quotes, parentheses and square brackets
          container file cfile.sdf.
       }
       \sstexamplesubsection{
-         \% hfill {\tt '}cfile.real(2,1:){\tt '} 5.5
+         \% hfill \texttt{'}cfile.real(2,1:)\texttt{'} 5.5
       }{
          Puts value 5.5 in each element of the specified slice of OBJECT
          (assuming the slice specification is valid for OBJECT).
       }
       \sstexamplesubsection{
-         \% hfill cfile.real {\tt '}{\tt "}a{\tt "}{\tt '}
+         \% hfill cfile.real \texttt{'}\texttt{"}a\texttt{"}\texttt{'}
       }{
-         Fails as the value {\tt '}a{\tt '} cannot be converted to \_REAL.
+         Fails as the value \texttt{'}a\texttt{'} cannot be converted to \_REAL.
       }
       \sstexamplesubsection{
-         \% hfill cfile.chars {\tt '}{\tt "} {\tt "}{\tt '}
+         \% hfill cfile.chars \texttt{'}\texttt{"} \texttt{"}\texttt{'}
       }{
          Writes a blank string into every element of component CHARS
          of container file cont.sdf
@@ -1231,7 +716,7 @@ Running from ICL will be similar but quotes, parentheses and square brackets
    }{
       There is a limit of 80 characters on the size of a character value which
       may be given. A value larger than this will cause a DAT\_\_TRUNC error.
-      A smaller value too large to fit in the specified object{\tt '}s elements will
+      A smaller value too large to fit in the specified object\texttt{'}s elements will
       be silently truncated.
    }
 }
@@ -1258,8 +743,8 @@ Running from ICL will be similar but quotes, parentheses and square brackets
         MIN, MAX    & \_REAL          & Min,max values in numeric array
       \end{tabular}
 
-      The {\tt '}internal{\tt '} parameter ATTR is set to the requested value and, if
-      ECHO is TRUE, the value is displayed on the user{\tt '}s terminal.
+      The \texttt{'}internal\texttt{'} parameter ATTR is set to the requested value and, if
+      ECHO is TRUE, the value is displayed on the user\texttt{'}s terminal.
 
       For items MIN and MAX, internal parameter INDEX is also set (but not
       displayed).
@@ -1311,7 +796,7 @@ Running from ICL will be similar but quotes, parentheses and square brackets
    }
    \sstexamples{
       \sstexamplesubsection{
-         \% hget {\tt '}numvec(2){\tt '} value
+         \% hget \texttt{'}numvec(2)\texttt{'} value
       }{
          Displays the value of the second element of object numvec
       }
@@ -1336,7 +821,7 @@ Running from ICL will be similar but quotes, parentheses and square brackets
       }
    }
    \sstnotes{
-      Internal parameters (ATTR and INDEX) are not saved in the task{\tt '}s
+      Internal parameters (ATTR and INDEX) are not saved in the task\texttt{'}s
       parameter file. Their values can be written to HDS objects by
       specifying the name of an existing object of a suitable type on the
       command line. The object name must be preceded by @ for the ATTR
@@ -1353,7 +838,7 @@ Running from ICL will be similar but quotes, parentheses and square brackets
       Displays help about HDSTOOLS.  It describes individual commands in
       detail.
 
-      See the Section {\tt "}Navigating the Help Library{\tt "} for details how to
+      See the Section \texttt{"}Navigating the Help Library\texttt{"} for details how to
       move around the help information, and to select the topics you
       want to view.
    }
@@ -1364,22 +849,22 @@ Running from ICL will be similar but quotes, parentheses and square brackets
       \sstsubsection{
          TOPIC = LITERAL (Read)
       }{
-         Topic for which help is to be given. [{\tt "} {\tt "}]
+         Topic for which help is to be given. [\texttt{"} \texttt{"}]
       }
       \sstsubsection{
          SUBTOPIC = LITERAL (Read)
       }{
-         Subtopic for which help is to be given. [{\tt "} {\tt "}]
+         Subtopic for which help is to be given. [\texttt{"} \texttt{"}]
       }
       \sstsubsection{
          SUBSUBTOPIC = LITERAL (Read)
       }{
-         Subsubtopic for which help is to be given. [{\tt "} {\tt "}]
+         Subsubtopic for which help is to be given. [\texttt{"} \texttt{"}]
       }
       \sstsubsection{
          SUBSUBSUBTOPIC = LITERAL (Read)
       }{
-         Subsubsubtopic for which help is to be given. [{\tt "} {\tt "}]
+         Subsubsubtopic for which help is to be given. [\texttt{"} \texttt{"}]
       }
    }
    \sstexamples{
@@ -1407,7 +892,7 @@ Running from ICL will be similar but quotes, parentheses and square brackets
    }{
       The help information is arranged hierarchically.  You can move
       around the help information whenever HHELP prompts.  This
-      occurs when it has either presented a screen{\tt '}s worth of text or
+      occurs when it has either presented a screen\texttt{'}s worth of text or
       has completed displaying the previously requested help.  The
       information displayed by HHELP on a particular topic includes a
       description of the topic and a list of subtopics that further
@@ -1418,12 +903,12 @@ Running from ICL will be similar but quotes, parentheses and square brackets
 
          \sstitem
             a topic and/or subtopic name(s) to display the help for that
-               topic or subtopic, so for example, {\tt "}hdisplay parameters dev{\tt "}
+               topic or subtopic, so for example, \texttt{"}hdisplay parameters dev\texttt{"}
                gives help on DEV, which is a subtopic of Parameters, which
                in turn is a subtopic of HDISPLAY;
 
          \sstitem
-            a $<$RETURN$>$ to see more text at a {\tt "}Press RETURN to continue ...{\tt "}
+            a $<$RETURN$>$ to see more text at a \texttt{"}Press RETURN to continue ...\texttt{"}
                request;
 
          \sstitem
@@ -1436,12 +921,12 @@ Running from ICL will be similar but quotes, parentheses and square brackets
                response to any prompt will terminate the help session;
 
          \sstitem
-            a question mark {\tt "}?{\tt "} to redisplay the text for the current
+            a question mark \texttt{"}?\texttt{"} to redisplay the text for the current
                topic, including the list of topic or subtopic names; or
 
          \sstitem
-            an ellipsis {\tt "}...{\tt "} to display all the text below the
-               current point in the hierarchy.  For example, {\tt "}HDISPLAY...{\tt "}
+            an ellipsis \texttt{"}...\texttt{"} to display all the text below the
+               current point in the hierarchy.  For example, \texttt{"}HDISPLAY...\texttt{"}
                displays information on the HDISPLAY topic as well as
                information on all the subtopics under HDISPLAY.
 
@@ -1451,16 +936,16 @@ Running from ICL will be similar but quotes, parentheses and square brackets
       \sstitemlist{
 
          \sstitem
-            Just give the first few characters, e.g. {\tt "}PARA{\tt "} for
+            Just give the first few characters, e.g. \texttt{"}PARA\texttt{"} for
                Parameters.
 
          \sstitem
             Some topics are composed of several words separated by
                underscores.  Each word of the keyword may be abbreviated,
-               e.g. {\tt "}Colour\_Set{\tt "} can be shortened to {\tt "}C\_S{\tt "}.
+               e.g. \texttt{"}Colour\_Set\texttt{"} can be shortened to \texttt{"}C\_S\texttt{"}.
 
          \sstitem
-            The characters {\tt "}\%{\tt "} and {\tt "}$*${\tt "} act as wildcards, where the
+            The characters \texttt{"}\%\texttt{"} and \texttt{"}$*$\texttt{"} act as wildcards, where the
                percent sign matches any single character, and asterisk
                matches any sequence of characters.  Thus to display
                information on all available topics, type an asterisk in
@@ -1533,13 +1018,13 @@ Running from ICL will be similar but quotes, parentheses and square brackets
          Writes the value 20000 into the specified component
       }
       \sstexamplesubsection{
-         \% hmodify {\tt '}ds.axis(1).units{\tt '} {\tt '}{\tt "}Counts/s{\tt "}{\tt '}
+         \% hmodify \texttt{'}ds.axis(1).units\texttt{'} \texttt{'}\texttt{"}Counts/s\texttt{"}\texttt{'}
       }{
-         Writes the value {\tt "}Counts/s{\tt "} into the UNITS component of first element
+         Writes the value \texttt{"}Counts/s\texttt{"} into the UNITS component of first element
          of the AXIS array of structures in container file ds.sdf.
       }
       \sstexamplesubsection{
-         \% hmodify {\tt '}ds.data\_array(1:5){\tt '} {\tt '}[1 2 3 4 5]{\tt '}
+         \% hmodify \texttt{'}ds.data\_array(1:5)\texttt{'} \texttt{'}[1 2 3 4 5]\texttt{'}
       }{
          Writes the given values into the specified slice of component
          DATA\_ARRAY in container file ds.sdf.
@@ -1660,7 +1145,7 @@ Running from ICL will be similar but quotes, parentheses and square brackets
    Change state of a primitive HDS object to undefined
 }{
    \sstdescription{
-      The state of the specified object is set to {\tt '}undefined{\tt '}. All subsequent
+      The state of the specified object is set to \texttt{'}undefined\texttt{'}. All subsequent
       read operations will fail until the object is written to (re-defined).
       An attempt to reset a slice of an object will reset the whole object,
       an attempt to reset a structure object will have no effect.
@@ -1682,7 +1167,7 @@ Running from ICL will be similar but quotes, parentheses and square brackets
          Resets the DATA component of structure DATA\_ARRAY in file cfile.
       }
       \sstexamplesubsection{
-         \% hreset {\tt '}cfile.data\_array.data(1:10,1:10){\tt '}
+         \% hreset \texttt{'}cfile.data\_array.data(1:10,1:10)\texttt{'}
       }{
          Resets the whole of object cfile.data\_array.data
       }
@@ -1740,12 +1225,12 @@ Running from ICL will be similar but quotes, parentheses and square brackets
          Changes  numvarr to a 5000 element vector.
       }
       \sstexamplesubsection{
-         \% hreshape numarr {\tt '}[50,50]{\tt '}
+         \% hreshape numarr \texttt{'}[50,50]\texttt{'}
       }{
          Produces a 50x50 array of numbers. Elements [:50-100] are discarded.
       }
       \sstexamplesubsection{
-         \% hreshape numarr {\tt '}[50,100]{\tt '}
+         \% hreshape numarr \texttt{'}[50,100]\texttt{'}
       }{
          After the last example this would restore the original shape of
          numarr but the previously discarded values may be lost.
@@ -1834,7 +1319,7 @@ Running from ICL will be similar but quotes, parentheses and square brackets
       \sstsubsection{
          SLICE = \_CHAR (Read)
       }{
-         Range of data to be output in form {\tt "}n1:n2{\tt "} {\tt "}:n2{\tt "} or {\tt "}n1:{\tt "}.
+         Range of data to be output in form \texttt{"}n1:n2\texttt{"} \texttt{"}:n2\texttt{"} or \texttt{"}n1:\texttt{"}.
          [$*$ (whole object)]
       }
       \sstsubsection{
